--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,11 @@ bootRun {
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
 }
 
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
+
 tasks.withType(Test) {
+
     systemProperty "geb.env", System.getProperty('geb.env')
     systemProperty "geb.build.reportsDir", reporting.file("geb/integrationTest")
     systemProperty "webdriver.chrome.driver", System.getProperty('webdriver.chrome.driver')
