--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 
 dependencies {
 
+    compile 'com.heroku.sdk:heroku-jdbc:0.1.1'
     compile 'org.grails.plugins:excel-export:2.1'
     compile 'org.grails.plugins:spring-security-core:3.2.3'
     runtime 'mysql:mysql-connector-java:8.0.12'
@@ -71,7 +72,9 @@ bootRun {
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
 }
 
-
+task stage {
+    dependsOn installDist
+}
 
 tasks.withType(Test) {
 
