--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 
 dependencies {
 
+    compile 'com.github.jsimone:webapp-runner:8.5.11.3'
     compile 'com.heroku.sdk:heroku-jdbc:0.1.1'
     compile 'org.grails.plugins:excel-export:2.1'
     compile 'org.grails.plugins:spring-security-core:3.2.3'
@@ -72,9 +73,19 @@ bootRun {
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
 }
 
-task stage {
-    dependsOn installDist
+task stage() {
+    dependsOn clean, war
 }
+war.mustRunAfter clean
+
+task copyToLib(type: Copy) {
+    into "$buildDir/server"
+    from(configurations.compile) {
+        include "webapp-runner*"
+    }
+}
+
+stage.dependsOn(copyToLib)
 
 tasks.withType(Test) {
 
