--- a/build.gradle
+++ b/build.gradle
@@ -73,20 +73,18 @@ bootRun {
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
 }
 
-
-task stage(dependsOn: ['build', 'clean'])
-build.mustRunAfter clean
-
-
-task copyToLib(type: Copy) {
-    into "$buildDir/lib"
-    from(configurations.compile)
+task wrapper(type: Wrapper) {
+    gradleVersion = gradleWrapperVersion
 }
-
-stage.dependsOn(copyToLib)
 
 task stage() {
     dependsOn clean, war
+}
+tasks.stage.doLast() {
+    delete fileTree(dir: "build/distributions")
+    delete fileTree(dir: "build/assetCompile")
+    delete fileTree(dir: "build/distributions")
+    delete fileTree(dir: "build/libs", exclude: "*.war")
 }
 war.mustRunAfter clean
 
